# gh-rpm-updater

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml  release.yml
gh_rpm/: __main__.py
